hello_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - host: "nginx.way2hacker.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
  - host: "nginx123.way2hacker.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
